# LiDar-Object-Detection-Tracking

./: .gitignore  .gitmodules  README.md  pyproject.toml
docs/: recap.md  submition.md
docs/checks_terminal_outputs/: part1.md  part2.md  part3.md  part4.md
scripts/: ._Processing_LIDAR_Example.m  ._read_blickfeld_csv.m  main.py
scripts/inference/: __init__.py  model_inference.py
scripts/inference/models/pointpillars/archive/: data.pkl
scripts/inference/models/pointpillars/archive/data/: 0  1  10  100  102  103  104  105  106  108  109  110  111  112  114  115  116  117  118  119  12  120  121  122  123  125  13  14  15  16  18  19  2  20  21  22  24  25  26  27  (+67 more)
scripts/sanity_check/: __init__.py  data_loader.py  main.py
scripts/sanity_check/checks/: __init__.py  base_check.py  header_check.py  range_check.py  spatial_consistency_check.py  statistics_check.py  timestamp_check.py
scripts/utils/: __init__.py  df_pcd_converter.py  pcd_to_bin_converter.py  text_file_reader.py
scripts/visualization/: matplot_visualizer.py
