[tool.poetry]
name = "lidar-sensor-fusion"
version = "0.1.0"
description = ""
authors = ["PatrickBayim-KS <165992384+PatrickBayim-KS@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
open3d = "^0.19.0"
opencv-python = "^4.11.0.86"
torch = "^2.5.1"
shapely = "^2.0.6"
mayavi = "^4.8.2"
spconv = "^2.3.8"
pip = "^25.0"
pybind11 = "^2.13.6"
ply = "^3.11"
scikit-learn = "^1.6.1"
openmim = "^0.3.9"


[tool.poetry.scripts]
main = "scripts.main.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
